Integrate Areola’s logic with ai-tutor-api, fix regex syntax errors

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <option value="tutor">AI Tutor (Knowledge Base)</option>
     <option value="areola">Areola (Wikipedia)</option>
   </select>
-  <input type="text" id="query" placeholder="Ask a question (e.g., What is a derivative?)">
+  <input type="text" id="query" placeholder="Ask a question (e.g., What is a derivative?) or '!wiki [topic]'">
   <button onclick="askTutor()">Submit</button>
   <div id="response"></div>
   <canvas id="visual"></canvas>
