--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,14 @@
   <title>AI Tutor & Areola</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; }
+    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
     canvas { max-width: 600px; margin: 20px auto; }
-    #response { margin: 20px; }
+    #response { margin: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 5px; max-width: 800px; margin-left: auto; margin-right: auto; }
+    #response h2 { color: #2c3e50; }
+    #response pre { background: #f5f5f5; padding: 10px; border-radius: 3px; }
+    #response svg { margin: 10px 0; }
     select { margin: 10px; padding: 5px; }
+    input, button { margin: 5px; padding: 5px; }
   </style>
 </head>
 <body>
@@ -35,7 +39,7 @@
           body: JSON.stringify({ query, mode })
         });
         const data = await response.json();
-        responseDiv.innerText = data.answer || 'No response available.';
+        responseDiv.innerHTML = data.answer ? data.answer.replace(/\n/g, '<br>') : 'No response available.';
         if (data.chart) {
           const ctx = document.getElementById('visual').getContext('2d');
           new Chart(ctx, data.chart);
