--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         const response = await fetch('/api/tutor/ask', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ query, mode: 'areola' }) // Default to Areola mode
+          body: JSON.stringify({ query, mode: 'areola' })
         });
         const data = await response.json();
         if (data.answer) {
@@ -77,7 +77,12 @@
             const words = segment.split(' ').length;
             const duration = words * 0.3; // 300ms per word
             const utterance = new SpeechSynthesisUtterance(segment);
-            utterance.rate = 0.9; // Human-like pace
+            // Set to a female voice approximating Megyn Kelly's style
+            const voices = window.speechSynthesis.getVoices();
+            const femaleVoice = voices.find(v => v.lang === 'en-US' && v.name.includes('Female')) || voices[0];
+            utterance.voice = femaleVoice;
+            utterance.rate = 0.95; // Slightly slower for clarity
+            utterance.pitch = 1.1; // Slight boost for a confident tone
             utterance.onend = () => {
               index++;
               if (index === 1 && query.toLowerCase().includes('photosynthesis')) {
@@ -100,6 +105,12 @@
         responseDiv.innerText = 'Error: ' + error.message;
       }
     }
+
+    // Load voices when available
+    window.speechSynthesis.onvoiceschanged = () => {
+      const voices = window.speechSynthesis.getVoices();
+      console.log('Available voices:', voices.map(v => v.name)); // Debug available voices
+    };
   </script>
 </body>
 </html>
